# awesome-global-solver

./: CLAUDE.md
docs/: implementation_notes.md  memory.md  spec.md
global_optim/: CMakeLists.txt  README.md
global_optim/include/global_optim/benchmark/: runner.h
global_optim/include/global_optim/core/: problem.h  random.h  result.h  solver.h  types.h
global_optim/include/global_optim/problems/: benchmark_functions.h
global_optim/include/global_optim/solvers/: cmaes.h  mppi.h  svgd.h  xnes.h
global_optim/playground/: CMakeLists.txt  benchmark_runner.cpp  run.py  visualize.py
global_optim/tests/: CMakeLists.txt  test_benchmark_l1.cpp  test_benchmark_l2.cpp  test_cmaes.cpp  test_mppi.cpp  test_random.cpp  test_svgd.cpp  test_xnes.cpp
